@@ -87,9 +87,9 @@
                 JoinMarket is copyrighted, licensed under the GPLv3, and comes with no warranty.
             </p>
             <p>
-                <b>LNBits</b><br/>
+                <b>LNbits</b><br/>
                 <a href="https://github.com/lnbits/lnbits">https://github.com/lnbits/lnbits</a><br/>
-                LNBits is copyrighted, licensed under the MIT license, and comes with no warranty.
+                LNbits is copyrighted, licensed under the MIT license, and comes with no warranty.
             </p>
             <p>
                 <b>LND Connect</b><br/>
