@@ -1,3 +1,5 @@
+- Update LNbits to v1.0.0-rc10 and use vendors docker
+
 === v0.3.35 ===
 - Released 03/29/25
 - Add Datum Gateway v0.3.1
